[package]
name = "bors"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI
clap = { version = "4.0", features = ["env", "derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
anyhow = "1.0"
thiserror = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# GitHub
octocrab = "0.42.0"

# Async
futures = "0.3"
tokio = { version = "1.21", features = ["full"] }
arc-swap = "1.7.1"

# Web
hyper = "1.2.0"
axum = "0.8.1"
tower = { version = "0.4", features = ["limit"] }
jsonwebtoken = "9.2.0"
url = "2.3"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
http = "1.1.0"

# Cryptography
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
secrecy = "0.10.3"

# Database
sqlx = { version = "0.8.1", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }

# Time
chrono = "0.4"

itertools = "0.14.0"

[dev-dependencies]
insta = "1.26"
derive_builder = "0.20.0"
wiremock = "0.6.0"
base64 = "0.22.1"
tracing-test = "0.2.4"
regex = "1.10.4"
parking_lot = "0.12.3"
thread_local = "1.1.8"

[profile.release]
debug = 1

[profile.dev.package.sqlx-macros]
opt-level = 3
