[package]
name = "bors"
version = "0.1.0"
edition = "2024"
rust-version = "1.85.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# CLI
clap = { version = "4", features = ["env", "derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
anyhow = "1"
thiserror = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"

# GitHub
octocrab = { version = "0.44", features = ["timeout", "stream"] }

# Async
futures = "0.3"
tokio = { version = "1", features = ["full"] }
arc-swap = "1"

# Web
hyper = "1"
axum = "0.8"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6.4", features = ["catch-panic"] }
jsonwebtoken = "9"
url = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
http = "1"
askama = "0.14.0"

# Cryptography
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
secrecy = "0.10"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono"] }

# Time
chrono = "0.4"

# Utilities
itertools = "0.14"

# Text processing
pulldown-cmark = "0.13"
regex = "1"

[dev-dependencies]
insta = "1.26"
wiremock = "0.6"
base64 = "0.22"
tracing-test = "0.2"
regex = "1"
parking_lot = "0.12"
thread_local = "1"
sqlparser = { version = "0.58", features = ["visitor"] }
graphql-parser = "0.4"

[profile.release]
debug = 1

[profile.dev.package.sqlx-macros]
opt-level = 3
