[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
sea-orm-migration = { version = "0.11.0", features = [ "runtime-tokio-native-tls", "sqlx-sqlite", "sqlx-postgres" ] }
tokio = { version = "1.28", features = ["macros"] }
